// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SkipToContentLink /> should render correctly with children 1`] = `
<a
  className="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-srOnly MuiTypography-colorPrimary"
  href="#content"
  onBlur={[Function]}
  onFocus={[Function]}
>
  Skip to content
</a>
`;

exports[`<SkipToContentLink /> should render correctly with different children 1`] = `
<a
  className="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-srOnly MuiTypography-colorPrimary"
  href="#content"
  onBlur={[Function]}
  onFocus={[Function]}
>
  Another skip link text
</a>
`;

exports[`<SkipToContentLink /> should render correctly with different href prop 1`] = `
<a
  className="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-srOnly MuiTypography-colorPrimary"
  href="#another-anchor-id"
  onBlur={[Function]}
  onFocus={[Function]}
>
  Skip to content
</a>
`;

exports[`<SkipToContentLink /> should render correctly with href prop 1`] = `
<a
  className="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-srOnly MuiTypography-colorPrimary"
  href="#content"
  onBlur={[Function]}
  onFocus={[Function]}
>
  Skip to content
</a>
`;

exports[`<SkipToContentLink /> should render correctly with no props 1`] = `
<a
  className="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-srOnly MuiTypography-colorPrimary"
  href="#content"
  onBlur={[Function]}
  onFocus={[Function]}
>
  Skip to content
</a>
`;
